# Rocket_league_gyroscope

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
python_server/: certificate.pem  https-simple-server.py  private_key.pem
rust_server/: Cargo.toml
rust_server/src/: main.rs
src/: app.html
src/routes/: +page.svelte
src/routes/test/: +page.svelte
